--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>Mahjong Score</title>
   <base href="https://hongbinc.github.io/MJScore/dist/MJScore/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.4b7d37797d2fafab3e71.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3deafb94f798b9c73652.js"></script><script type="text/javascript" src="scripts.d273e48091cb14ac29de.js"></script><script type="text/javascript" src="main.c996fb26bb8d23c7198d.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
