--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Mahjong Score</title>
   <base href="https://hongbinc.github.io/MJScore/dist/MJScore/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="YnED3FZUn3L7NodieLn5hoIa7bVKwbLyKulz0uibTWk" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.css">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-5724633446826287",
       enable_page_level_ads: true
     });
   </script>
-  </head>
+</head>
+
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <script type="text/javascript" src="runtime.js"></script>
+  <script type="text/javascript" src="polyfills.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+</body>
+
 </html>
