--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,15 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="YnED3FZUn3L7NodieLn5hoIa7bVKwbLyKulz0uibTWk" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5724633446826287",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 <body>
   <app-root></app-root>
